--- a/.gitignore
+++ b/.gitignore
@@ -10,8 +10,10 @@
 
 # Output of the go coverage tool, specifically when used with LiteIDE
 *.out
+__debug_bin
 
 # Dependency directories (remove the comment below to include it)
 # vendor/
 .vscode
 .log
+target/
